fix: improve readability in info boxes

--- a/styles/prism-launcher/catppuccin.user.css
+++ b/styles/prism-launcher/catppuccin.user.css
@@ -86,9 +86,9 @@
     --danger-light: @peach;
     --disabled: @overlay0;
     --grad-primary: @red;
-    --info: @mauve;
-    --info-dark: @mauve;
-    --info-light: @mauve;
+    --info: @crust;
+    --info-dark: @crust;
+    --info-light: @crust;
     --inline-code: @base;
     --inline-code-fg: @text;
     --link: @accent-color;
